# mcp-code-vector-memory-sql

./: .gitignore  README.md  _tmp_libsql_client.db  _tmp_libsql_rs.db  _tmp_libsql_tx.db  _tmp_libsql_vector.db  main.py  pyproject.toml
docs/: API.md  ARCHITECTURE.md  ARQUITETURA.md  BENCHMARKS.md  CONFIGURACAO.md  CONFIGURATION.md  HYBRID_SEARCH.md  LIBSQL_LOCAL.md  MEMORY_TECHNIQUES.md  MODELS.md  OPERACAO.md  OPERATIONS.md  README.md  SMALL_NANO_MODELS.md  TUNING_GUIDE.md
docs/benchmarks/: 2026-01-04-22-03.json  latest.json  summary_cpu.json  summary_gpu.json
opencode/plugins/: mcp-session-ids.ts
src/: code-vector-memory.jsonc
src/code_memory/: config.py  db.py  embeddings.py  entities.py  ner.py  rerank.py  security.py  server.py  store.py  summary.py
tests/: conftest.py  factories.py  test_memory.py
tests/benchmarks/: test_store_benchmark.py
tests/data/: README.md  perf_memories.json  sample_memories.json
tests/integration/: test_store.py  test_tools.py
tests/unit/: test_ner_autodownload.py  test_summary_autodownload.py  test_summary_gpu_support.py  test_utils.py
