[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-memory"
version = "0.1.0"
description = "Local MCP memory server for OpenCode using SQLite + libSQL vector + FTS5."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "fastembed",
    "libsql-client",
]

[project.optional-dependencies]
graph = []
ner = ["llama-cpp-python", "huggingface-hub"]
dev = ["pytest", "pytest-benchmark"]

[project.scripts]
code-memory = "code_memory.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["code_memory*"]
